Remove footer nav links. Some spacing corrections in the footer

--- a/styles.css
+++ b/styles.css
@@ -470,7 +470,6 @@ a:hover {
     width: 100%;
     height: 80px;
     max-width: 1280px;
-    margin-bottom: 4rem;
 }
 
 .social-link {
@@ -610,15 +609,14 @@ a:hover {
 footer {
     display: flex;
     flex-direction: column;
-    min-height: 100px;
 }
 
 #author {
     margin: auto;
-    margin-top: .5rem;
+    /* margin-top: .5rem; */
     font-family: Girassol, sans-serif;
     font-size: 1.4em;
-    padding: 30px 15px 0px 15px;
+    padding: 0px 15px;
 }
 
 #footer-links-wrapper {
